Move release branch to the state of master by one single push.
See CHANGELOG.md for details.